--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AndroidOpenWeatherGopenux</string>
+    <string name="temperature">%s°C</string>
+    <string name="feels_like">%s°C</string>
+    <string name="humidity">%s%%</string>
 </resources>
